fix word break in inline code

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -57,6 +57,10 @@ code {
     font-size: 92%;
     color: #bf616a;
     background-color: #f9f9f9;
+
+    &.language-plaintext {
+        word-break: break-word;
+    }
 }
 
 pre code {
